# jianling

./: .gitignore  CMakeLists.txt  JL.dsw  JL.sln  UpgradeLog.htm  clean lj.bat  ncllm3.tlh  ncllm3.tli
JLSrvr/: DBLoginDlg.cpp  DBLoginDlg.h  DbMngr.cpp  DbMngr.h  DlgAcInfo.cpp  DlgAcInfo.h  DlgAcKey.cpp  DlgAcKey.h  DlgAcKeyView.cpp  DlgAcKeyView.h  DlgAcKeylog.cpp  DlgAcKeylog.h  DlgAddKey.cpp  DlgAddKey.h  DlgKeyAdd.cpp  DlgKeyAdd.h  JLSrvr.aps  JLSrvr.clw  JLSrvr.cpp  JLSrvr.dsp  JLSrvr.h  JLSrvr.rc  JLSrvr.vcproj  JLSrvr.vcxproj  JLSrvr.vcxproj.filters  JLSrvrDoc.cpp  JLSrvrDoc.h  JLSrvrView.cpp  JLSrvrView.h  ListenSocket.cpp  ListenSocket.h  MainFrm.cpp  MainFrm.h  ReadMe.txt  RecordAc.cpp  RecordAc.h  RecordKey.cpp  RecordKey.h  RecordKeyLog.cpp  RecordKeyLog.h  (+11 more)
JLSrvr/res/: JLSrvr.rc2
JLkit/: .gitignore  BindKeyDlg.cpp  BindKeyDlg.h  BugRepDlg.cpp  BugRepDlg.h  CFileDialog.cpp  CFileDialog.h  CVPNFile.cpp  CVPNFile.h  ConfigMgr.cpp  ConfigMgr.h  GlobalUserInfo.cpp  GlobalUserInfo.h  JLkit.aps  JLkit.clw  JLkit.cpp  JLkit.dsp  JLkit.h  JLkit.plg  JLkit.rc  JLkit.vcproj  JLkit.vcxproj  JLkit.vcxproj.filters  JLkitDoc.cpp  JLkitDoc.h  JLkitSocket.cpp  JLkitSocket.h  JLkitView.cpp  JLkitView.h  Keyviewdlg.cpp  Keyviewdlg.h  LaunchGameThread.cpp  LaunchGameThread.h  LoginSheet.cpp  LoginSheet.h  Logindlg.cpp  Logindlg.h  MainFrm.cpp  MainFrm.h  Modifybind.cpp  (+21 more)
JLkit/res/: JLkit.rc2
JLnp/: JLnp.cpp  JLnp.dsp  JLnp.vcproj  JLnp.vcxproj  JLnp.vcxproj.filters  ReadMe.txt  StdAfx.cpp  StdAfx.h  common.h
JLwg/: .gitignore  CombatBoss.cpp  CombatBoss.h  ConfigItemPage.cpp  ConfigItemPage.h  ConfigObjPage.cpp  ConfigObjPage.h  ConfigPartyPage.cpp  ConfigPartyPage.h  ConfigQhPage.cpp  ConfigQhPage.h  ConfigSheet.cpp  ConfigSheet.h  DataDlg.cpp  DataDlg.h  DbgPage.cpp  DbgPage.h  EventDispatcher.cpp  EventDispatcher.h  GameBag.cpp  GameBag.h  GameConfig.cpp  GameConfig.h  GameHepler.cpp  GameHepler.h  GameHook.cpp  GameHook.h  GameInit.cpp  GameInit.h  GameLog.cpp  GameLog.h  GameObj.cpp  GameObj.h  GameSpend.cpp  GameSpend.h  GameUI.cpp  GameUI.h  GamecallEx.cpp  GamecallEx.h  JLDlg.cpp  (+45 more)
JLwg/optimizer/: CHook.cpp  CHook.h  Optimizer.cpp  lde32.h
Optimizer/: CHook.cpp  CHook.h  Optimizer.cpp  Optimizer.def  Optimizer.dsp  Optimizer.h  Optimizer.rc  OptimizerHead.h  ReadMe.txt  Resource.h  StdAfx.cpp  StdAfx.h  lde32.cpp  types.h
Optimizer/res/: Optimizer.rc2
PartySrv/: ListenSock.cpp  ListenSock.h  PartySrv.cpp  PartySrv.dsp  PartySrv.h  PartySrv.rc  PartySrv.vcproj  PartySrv.vcxproj  PartySrv.vcxproj.filters  PartySrvDlg.cpp  PartySrvDlg.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  resource.h
PartySrv/res/: PartySrv.rc2
SrvCore/: ReadMe.txt  Resource.h  SrvCore.cpp  SrvCore.def  SrvCore.dsp  SrvCore.h  SrvCore.rc  StdAfx.cpp  StdAfx.h  WHEncrypt.cpp  WHEncrypt.h  WHService.cpp  WHService.h
SrvCore/res/: SrvCore.rc2
common/: CCHook.cpp  CCHook.h  CHook.cpp  CHook.h  CIniFile.cpp  CIniFile.h  CallTracer.cpp  CallTracer.h  HookSystemcallx86tox64.cpp  HookSystemcallx86tox64.h  Inject.cpp  Inject.h  Inlinehook.cpp  Inlinehook.h  Job.cpp  Job.h  LDasm.cpp  LDasm.h  Lock.h  Logger.cpp  Logger.h  MSJEXHND.cpp  MSJEXHND.h  RemoteLoadDll.cpp  RemoteLoadDll.h  ShareMem.cpp  ShareMem.h  ThreadPool.cpp  ThreadPool.h  Toolhelp.h  TrayIcon.cpp  TrayIcon.h  Userinfo.cpp  Userinfo.h  WHService.cpp  WHService.h  Webpost.cpp  Webpost.h  Work.cpp  Work.h  (+5 more)
detour/lib.X86/: detours.lib
tester/: AttackLogic.cpp  AttackLogic.h  Logic.cpp  Logic.h  ReadMe.txt  Resource.h  StdAfx.cpp  StdAfx.h  TaskDispter.cpp  TaskDispter.h  Test.cpp  Test.h  Tester.h  Tester.rc  Tester.vcproj  Tester.vcxproj  Tester.vcxproj.filters  UILogic.cpp  UILogic.h  hello.acf  hello.h  hello.idl  hello_c.c  hello_s.c  id_test.cpp  id_test.h  ontrolLogic.cpp  ontrolLogic.h  resource.h  tester.aps  tester.clw  tester.cpp  tester.dsp  tester.h  tester.vcproj  tester.vcxproj  tester.vcxproj.filters
第三方库/lua52/: UpgradeLog.htm  llex.h  lobject.h  lparser.h  lstate.h  lua.h  lua52.dsp  lua52.dsw  lua52.sln  lua52.vcxproj  lua52.vcxproj.filters  luaconf.h
第三方库/lua52/lib/: lau52.txt  lua52.lib  lua52d.lib
第三方库/vmp/Include/ASM/: VMProtectSDK.inc
第三方库/vmp/Include/C/: VMProtectDDK.h
第三方库/vmp/Include/Pascal/: VMProtectSDK.pas
