cmake_minimum_required(VERSION 3.2)
project(JL_Hanfu)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    common/CallTracer.cpp
    common/CallTracer.h
    common/CHook.cpp
    common/CHook.h
    common/common.h
    common/HookSystemcallx86tox64.cpp
    common/HookSystemcallx86tox64.h
    common/Inject.cpp
    common/Inject.h
    common/Inlinehook.cpp
    common/Inlinehook.h
    common/Job.cpp
    common/Job.h
    common/LDasm.cpp
    common/LDasm.h
    common/Lock.h
    common/Logger.cpp
    common/Logger.h
    common/MSJEXHND.cpp
    common/MSJEXHND.h
    common/protocol.h
    common/RemoteLoadDll.cpp
    common/RemoteLoadDll.h
    common/ThreadPool.cpp
    common/ThreadPool.h
    common/Toolhelp.h
    common/TrayIcon.cpp
    common/TrayIcon.h
    common/Webpost.cpp
    common/Webpost.h
    common/WHService.cpp
    common/WHService.h
    JLkit/BindKeyDlg.cpp
    JLkit/BindKeyDlg.h
    JLkit/ConfigMgr.cpp
    JLkit/ConfigMgr.h
    JLkit/CVPNFile.cpp
    JLkit/CVPNFile.h
    JLkit/JLkit.cpp
    JLkit/JLkit.h
    JLkit/JLkitDoc.cpp
    JLkit/JLkitDoc.h
    JLkit/JLkitSocket.cpp
    JLkit/JLkitSocket.h
    JLkit/JLkitView.cpp
    JLkit/JLkitView.h
    JLkit/Keyviewdlg.cpp
    JLkit/Keyviewdlg.h
    JLkit/Logindlg.cpp
    JLkit/Logindlg.h
    JLkit/LoginSheet.cpp
    JLkit/LoginSheet.h
    JLkit/MainFrm.cpp
    JLkit/MainFrm.h
    JLkit/MsgBox.cpp
    JLkit/MsgBox.h
    JLkit/MyStatusBar.cpp
    JLkit/MyStatusBar.h
    JLkit/Registdlg.cpp
    JLkit/Registdlg.h
    JLkit/resource.h
    JLkit/Settingdlg.cpp
    JLkit/Settingdlg.h
    JLkit/StatusBox.cpp
    JLkit/StatusBox.h
    JLkit/StdAfx.cpp
    JLkit/StdAfx.h
    JLnp/common.h
    JLnp/JLnp.cpp
    JLnp/StdAfx.cpp
    JLnp/StdAfx.h
    JLSrvr/db_sql.h
    JLSrvr/DbMngr.cpp
    JLSrvr/DbMngr.h
    JLSrvr/DlgAddKey.cpp
    JLSrvr/DlgAddKey.h
    JLSrvr/JLSrvr.cpp
    JLSrvr/JLSrvr.h
    JLSrvr/JLSrvrDoc.cpp
    JLSrvr/JLSrvrDoc.h
    JLSrvr/JLSrvrView.cpp
    JLSrvr/JLSrvrView.h
    JLSrvr/ListenSocket.cpp
    JLSrvr/ListenSocket.h
    JLSrvr/MainFrm.cpp
    JLSrvr/MainFrm.h
    JLSrvr/resource.h
    JLSrvr/StdAfx.cpp
    JLSrvr/StdAfx.h
    JLwg/optimizer/CHook.cpp
    JLwg/optimizer/CHook.h
    JLwg/optimizer/lde32.cpp
    JLwg/optimizer/lde32.h
    JLwg/optimizer/Optimizer.cpp
    JLwg/optimizer/Optimizer.h
    JLwg/optimizer/types.h
    JLwg/res/resource.h
    JLwg/CombatBoss.cpp
    JLwg/CombatBoss.h
    JLwg/ConfigQhPage.cpp
    JLwg/ConfigQhPage.h
    JLwg/DataDlg.cpp
    JLwg/DataDlg.h
    JLwg/gamecall.cpp
    JLwg/gamecall.h
    JLwg/GamecallEx.cpp
    JLwg/GamecallEx.h
    JLwg/GameConfig.cpp
    JLwg/GameConfig.h
    JLwg/gamedata-tw.h
    JLwg/gamedata-tw_new.h
    JLwg/gamedata.h
    JLwg/gamedef.h
    JLwg/GameHook.cpp
    JLwg/GameHook.h
    JLwg/GameSpend.cpp
    JLwg/GameSpend.h
    JLwg/gamestruct.h
    JLwg/JLDlg.cpp
    JLwg/JLDlg.h
    JLwg/JLwg.cpp
    JLwg/JLwg.h
    JLwg/LuaPage.cpp
    JLwg/LuaPage.h
    JLwg/resource.h
    JLwg/StdAfx.cpp
    JLwg/StdAfx.h
    JLwg/ToolDlg.cpp
    JLwg/ToolDlg.h
    PartySrv/ListenSock.cpp
    PartySrv/ListenSock.h
    PartySrv/PartySrv.cpp
    PartySrv/PartySrv.h
    PartySrv/PartySrvDlg.cpp
    PartySrv/PartySrvDlg.h
    PartySrv/resource.h
    PartySrv/StdAfx.cpp
    PartySrv/StdAfx.h
    Tester/hello.h
    Tester/hello_c.c
    Tester/hello_s.c
    Tester/id_test.cpp
    Tester/id_test.h
    Tester/resource.h
    Tester/StdAfx.cpp
    Tester/StdAfx.h
    Tester/Test.cpp
    Tester/Test.h
    Tester/Tester.cpp
    Tester/Tester.h
    第三方库/detour/include/detours.h
    第三方库/detour/include/detver.h
    第三方库/lua52/lapi.c
    第三方库/lua52/lapi.h
    第三方库/lua52/lauxlib.c
    第三方库/lua52/lauxlib.h
    第三方库/lua52/lbaselib.c
    第三方库/lua52/lbitlib.c
    第三方库/lua52/lcode.c
    第三方库/lua52/lcode.h
    第三方库/lua52/lcorolib.c
    第三方库/lua52/lctype.c
    第三方库/lua52/lctype.h
    第三方库/lua52/ldblib.c
    第三方库/lua52/ldebug.c
    第三方库/lua52/ldebug.h
    第三方库/lua52/ldo.c
    第三方库/lua52/ldo.h
    第三方库/lua52/ldump.c
    第三方库/lua52/lfunc.c
    第三方库/lua52/lfunc.h
    第三方库/lua52/lgc.c
    第三方库/lua52/lgc.h
    第三方库/lua52/linit.c
    第三方库/lua52/liolib.c
    第三方库/lua52/llex.c
    第三方库/lua52/llex.h
    第三方库/lua52/llimits.h
    第三方库/lua52/lmathlib.c
    第三方库/lua52/lmem.c
    第三方库/lua52/lmem.h
    第三方库/lua52/loadlib.c
    第三方库/lua52/lobject.c
    第三方库/lua52/lobject.h
    第三方库/lua52/lopcodes.c
    第三方库/lua52/lopcodes.h
    第三方库/lua52/loslib.c
    第三方库/lua52/lparser.c
    第三方库/lua52/lparser.h
    第三方库/lua52/lprefix.h
    第三方库/lua52/lstate.c
    第三方库/lua52/lstate.h
    第三方库/lua52/lstring.c
    第三方库/lua52/lstring.h
    第三方库/lua52/lstrlib.c
    第三方库/lua52/ltable.c
    第三方库/lua52/ltable.h
    第三方库/lua52/ltablib.c
    第三方库/lua52/ltm.c
    第三方库/lua52/ltm.h
    第三方库/lua52/lua.h
    第三方库/lua52/lua.hpp
    第三方库/lua52/luaconf.h
    第三方库/lua52/lualib.h
    第三方库/lua52/lundump.c
    第三方库/lua52/lundump.h
    第三方库/lua52/lutf8lib.c
    第三方库/lua52/lvm.c
    第三方库/lua52/lvm.h
    第三方库/lua52/lzio.c
    第三方库/lua52/lzio.h
    第三方库/SimpleIni/ConvertUTF.c
    第三方库/SimpleIni/ConvertUTF.h
    第三方库/SimpleIni/SimpleIni.h)

add_executable(JL_Hanfu ${SOURCE_FILES})